<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.monoloco.zaraqueue.activities.MainActivity">

    <include layout="@layout/content_main" />

    <android.support.design.widget.FloatingActionButton
        android:visibility="visible"
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="middle|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@android:drawable/ic_dialog_email" />

    <LinearLayout
        android:visibility="visible"
        android:id="@+id/msg_box_queue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:padding="90px">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical">

            <TextView
                android:id="@+id/availability_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/availability_title"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/availability_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/disponible"
                android:textSize="14sp" />
        </LinearLayout>


        <TextView
            android:id="@+id/queuetime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:layout_gravity="bottom"
            android:text="10min"
            android:textColor="@color/colorAccent"
            android:textSize="14sp" />


    </LinearLayout>

    <LinearLayout
        android:visibility="invisible"
        android:id="@+id/msg_box_call"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:background="@color/colorPrimary"
        android:padding="90px">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">
            <TextView
                android:id="@+id/call_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/acude"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp" />
            <TextView
                android:id="@+id/call_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/acude_msg"
                android:textSize="14sp" />
        </LinearLayout>


        <TextView
            android:id="@+id/timer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="04:59"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:visibility="invisible"
        android:id="@+id/msg_box_timeover"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:background="@color/colorPrimary"
        android:padding="90px"
        android:orientation="vertical">


        <TextView
            android:id="@+id/timeover_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timeover_title"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/timeover_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timeover_subtitle"
            android:textSize="14sp" />
        <TextView
            android:id="@+id/timeover_renovar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Renovar"
            android:textColor="@color/colorAccent"
            android:onClick=""
            android:textSize="16sp" />





    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
